# alpaca

./: LICENSE  README.md  alpaca_config.py  pyproject.toml  requirements.txt  run_alpaca.py  run_alpaca.sh  run_alpaca_tdc.py  run_config.py  run_config_TDC.py  tdlmc_helper.py
.github/workflows/: tests.yml
TDC/rung2/code1/f160w-seed120/: lens_info_for_Good_team.txt  non_drizzled-lens-image-1.fits  non_drizzled-lens-image-2.fits  non_drizzled-lens-image-3.fits  non_drizzled-lens-image-4.fits  non_drizzled-lens-image-5.fits  non_drizzled-lens-image-6.fits  non_drizzled-lens-image-7.fits  non_drizzled-lens-image-8.fits  non_drizzled-noise_map-1.fits  non_drizzled-noise_map-2.fits  non_drizzled-noise_map-3.fits  non_drizzled-noise_map-4.fits  non_drizzled-noise_map-5.fits  non_drizzled-noise_map-6.fits  non_drizzled-noise_map-7.fits  non_drizzled-noise_map-8.fits  non_drizzled_psf-1.fits  non_drizzled_psf-2.fits  non_drizzled_psf-3.fits  non_drizzled_psf-4.fits  non_drizzled_psf-5.fits  non_drizzled_psf-6.fits  non_drizzled_psf-7.fits  non_drizzled_psf-8.fits
TDC/rung2/code1/f160w-seed120/drizzled_image/: noise_map.fits
alpaca/: __init__.py  benchmarking.py  config.py  output.py  pipeline.py  plotting.py
alpaca/data/: __init__.py  detection.py  grids.py  loader.py  masks.py  noise.py  setup.py
alpaca/inference/: __init__.py  gradient_descent.py  nautilus.py  nuts.py
alpaca/likelihood/: __init__.py  combined.py  imaging.py  rayshoot.py  time_delay.py
alpaca/models/: __init__.py  lens_image.py  prob_model.py  prob_model_corrfield.py  setup.py
alpaca/pipeline/: __init__.py  io.py  runner.py  setup.py
alpaca/pipeline/stages/: __init__.py  plotting.py  sampling.py
alpaca/plotting/: __init__.py  benchmarking.py  diagnostics.py  model_plots.py  posterior_plots.py
alpaca/psf/: __init__.py  isolation.py  iterations.py  reconstruction.py  utils.py
alpaca/sampler/: __init__.py  constants.py  likelihood.py  losses.py  priors.py  utils.py
alpaca/sampler/gradient_descent/: __init__.py  bic.py  likelihood.py  optimizer.py
alpaca/sampler/nautilus/: __init__.py  likelihood.py  posterior.py  prior.py  prior_utils.py  sampler.py
alpaca/sampler/nuts/: __init__.py  likelihood.py  posterior.py  sampler.py
alpaca/utils/: __init__.py  bic.py  cosmology.py  detection.py  grids.py  jax_helpers.py  masks.py  noise.py  tdc.py
analysis/: corner_overlay.ipynb  ddt_h0_posterior.ipynb  posterior_diagnostics.ipynb  run_alpaca_bic.py  show_posterior.ipynb
data/: image.fits
tests/: __init__.py  conftest.py  test_benchmarking.py  test_config.py  test_data.py  test_gradient_descent.py  test_imports.py  test_integration.py  test_likelihood.py  test_models.py  test_nautilus.py  test_nuts.py  test_plotting.py  test_psf.py  test_sampler_common.py  test_utils.py
(+1 files in other folders)
